[package]
name = "rustc-warp-ice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0"
hyper = { version = "0", default-features = false }
tokio = { version = "1", default-features = false }
warp = { version = "0", default-features = false }


[patch.crates-io]
warp = { path = "./warp" }
hyper = { path = "./hyper" }